--- a/src/Dhgms.GripeWithRoslyn.UnitTests/Dhgms.GripeWithRoslyn.UnitTests.csproj
+++ b/src/Dhgms.GripeWithRoslyn.UnitTests/Dhgms.GripeWithRoslyn.UnitTests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net8.0;net48</TargetFrameworks>
+    <LangVersion>12</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
