--- a/src/Dhgms.GripeWithRoslyn.Cmd/Dhgms.GripeWithRoslyn.Cmd.csproj
+++ b/src/Dhgms.GripeWithRoslyn.Cmd/Dhgms.GripeWithRoslyn.Cmd.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    <PackageReference Include="Whipstaff.Runtime" Version="7.1.131" />
   </ItemGroup>
 
   <ItemGroup>
