--- a/src/Gripe.MSBuildBinLogStats.DotNetTool/Gripe.MSBuildBinLogStats.DotNetTool.csproj
+++ b/src/Gripe.MSBuildBinLogStats.DotNetTool/Gripe.MSBuildBinLogStats.DotNetTool.csproj
@@ -3,8 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>gripe-msbuildlogstats</ToolCommandName>
+    <AssemblyName>gripe-msbuildlogstats</AssemblyName>
+    <PackageDescription>dot net tool to produce stats from an MSBuild structured log.</PackageDescription>
   </PropertyGroup>
 
   <ItemGroup>
